compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__custom_types__fault_tolerance.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
expression: "\npub record Cat {\n  Cat(UnknownType)\n}\n\npub type Kitten = AnotherUnknownType\n        "
---
----- SOURCE CODE

pub record Cat {
  Cat(UnknownType)
}

pub type Kitten = AnotherUnknownType
        

----- ERROR
error: Unknown type
  ┌─ /src/one/two.rakun:3:7
  │
3 │   Cat(UnknownType)
  │       ^^^^^^^^^^^

The type `UnknownType` is not defined or imported in this module.

error: Unknown type
  ┌─ /src/one/two.rakun:6:19
  │
6 │ pub type Kitten = AnotherUnknownType
  │                   ^^^^^^^^^^^^^^^^^^

The type `AnotherUnknownType` is not defined or imported in this module.
